Bug 908987 - Honor mIsActive more aggressively to avoid calling IsVisibleConsideringAncestors.  r=roc

This means that we avoid an O(N^2) calling pattern of IsVisible when we
call IsVisible for all tabs of a tabbrowser, since in a tabbrowser
(which uses an nsDeckFrame), IsVisibleConsideringAncestors is O(N) in
number of earlier tabs.